--- a/app/src/main/res/layout/activity_stay.xml
+++ b/app/src/main/res/layout/activity_stay.xml
@@ -1,60 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relDrawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Stay">
+    android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/frameParentStay"
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
 
-    <ImageView
-        android:id="@+id/imgStay"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:src="@drawable/stay_image_background"
-        android:scaleType="centerCrop"
-        />
 
-    <TextView
-        android:id="@+id/tvStayHeading"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:gravity="center|start"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:text="@string/StayHeading">
+        <FrameLayout
+            android:id="@+id/frameParentStay"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
 
-    </TextView>
-    </FrameLayout>
+            <ImageView
+                android:id="@+id/imgStay"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/stay_image_background" />
 
-    <LinearLayout
-        android:id="@+id/linearStayListings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/custom_corner_radius_stay"
-        android:layout_below="@+id/frameParentStay">
+            <ImageButton
+                android:id="@+id/ibBurgerMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:background="@android:color/transparent"
+                android:contentDescription="placeholder"
+                android:src="@drawable/baseline_menu_24"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <TextView
+                android:id="@+id/tvStayHeading"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginStart="40dp"
+                android:gravity="center|start"
+                android:shadowColor="@color/black"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="20"
+                android:text="@string/StayHeading"
+                android:textColor="@color/white"
+                android:textSize="45sp"
+                android:textStyle="bold" />
+
+        </FrameLayout>
 
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginEnd="25dp"
+            android:layout_below="@+id/frameParentStay"
             android:layout_marginStart="25dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="16dp"
+            android:alpha="0.6"
             android:gravity="center"
-            android:textStyle="italic"
+            android:hint="@string/searchBar"
             android:inputType="text"
+            android:textColor="@color/black"
             android:textColorHint="@color/searchBarHint"
-            android:hint="@string/searchBar">
+            android:textStyle="italic" />
 
-        </EditText>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/etSearch"
+            tools:ignore="SpeakableTextPresentCheck">
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearStayListings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/custom_corner_radius_stay"
+                android:orientation="vertical">
 
+                <!-- ... Rest of your views ... -->
+
+            </LinearLayout>
+        </ScrollView>
 </RelativeLayout>
+
