--- a/app/src/main/res/layout/drawer_header_layout.xml
+++ b/app/src/main/res/layout/drawer_header_layout.xml
@@ -5,6 +5,15 @@
     android:layout_height="wrap_content"
     android:gravity="bottom">
 
+<ImageView
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:layout_marginTop="16dp"
+    android:layout_gravity="center"
+    android:src="@drawable/logo">
+
+</ImageView>
+
 
 
 </LinearLayout>
