--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="button_grey">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/gray_600</item>
+    </style>
 </resources>
