Fixed Image naming conventions Added strings to resources

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,13 @@
         android:id="@+id/tvHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:shadowColor="#222222"
         android:shadowDx="1"
         android:shadowDy="10"
         android:shadowRadius="10"
-        android:text="Home"
+        android:text="@string/HomeHeading"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold" />
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="About"
+            android:text="@string/About"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -56,9 +56,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:drawableLeft="@android:drawable/ic_dialog_info"
+                android:drawableStart="@android:drawable/ic_dialog_info"
                 android:gravity="center_horizontal"
-                android:text="Stilbaai"
+                android:text="@string/Stilbaai"
                 android:textSize="12sp"/>
 
             <Button
@@ -67,9 +67,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:drawableLeft="@android:drawable/ic_dialog_info"
+                android:drawableStart="@android:drawable/ic_dialog_info"
                 android:gravity="center_horizontal"
-                android:text="Jongensfontein"
+                android:text="@string/Jongensfontein"
                 android:textSize="12sp" />
 
             <Button
@@ -78,9 +78,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:drawableLeft="@android:drawable/ic_dialog_info"
+                android:drawableStart="@android:drawable/ic_dialog_info"
                 android:gravity="center_horizontal"
-                android:text="Melkhoutfontein"
+                android:text="@string/Melkhoutfontein"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -88,8 +88,8 @@
             android:id="@+id/tvToday"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Today's Events"
+            android:layout_marginStart="10dp"
+            android:text="@string/TodayEvents"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -100,7 +100,7 @@
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/ic_launcher_background" />
@@ -110,8 +110,8 @@
             android:id="@+id/tvEelAdvert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Come see the Eels!"
+            android:layout_marginStart="10dp"
+            android:text="@string/EelAdvert"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -119,14 +119,14 @@
             android:id="@+id/imageView9"
             android:layout_width="wrap_content"
             android:layout_height="92dp"
-            app:srcCompat="@drawable/homeEel" />
+            app:srcCompat="@drawable/home_eel" />
 
         <TextView
             android:id="@+id/tvLocalStore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Visit our Local Store!"
+            android:layout_marginStart="10dp"
+            android:text="@string/StoreAdvert"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -134,7 +134,7 @@
             android:id="@+id/imageView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/homeStore" />
+            app:srcCompat="@drawable/home_store" />
     </LinearLayout>
 
 
