--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,7 +18,31 @@
             android:icon="@drawable/baseline_fastfood_24"/>
 
         <item
-            android:id="@+id/nav_experience"
+            android:id="@+id/nav_business"
+            android:title="@string/Experience"
+            android:icon="@drawable/baseline_fastfood_24"
+            app:actionLayout="@layout/spinner"/>
+
+        <item
+            android:id="@+id/nav_Activities"
+            android:title="@string/Experience"
+            android:icon="@drawable/baseline_fastfood_24"
+            app:actionLayout="@layout/spinner"/>
+
+        <item
+            android:id="@+id/nav_Events"
+            android:title="@string/Experience"
+            android:icon="@drawable/baseline_fastfood_24"
+            app:actionLayout="@layout/spinner"/>
+
+        <item
+            android:id="@+id/nav_Contacts"
+            android:title="@string/Experience"
+            android:icon="@drawable/baseline_fastfood_24"
+            app:actionLayout="@layout/spinner"/>
+
+        <item
+            android:id="@+id/nav_Settings"
             android:title="@string/Experience"
             android:icon="@drawable/baseline_fastfood_24"
             app:actionLayout="@layout/spinner"/>
