[Eat] Container transform transition implemented on list item clicked

--- a/app/src/main/res/layout/activity_eat.xml
+++ b/app/src/main/res/layout/activity_eat.xml
@@ -97,6 +97,12 @@
                     android:layout_centerInParent="true" />
 
 
+                <ImageView
+                    android:id="@+id/sharedImageView"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:transitionName="sharedImage" />
+
                <!-- <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
