--- a/app/src/main/res/layout/activity_eat.xml
+++ b/app/src/main/res/layout/activity_eat.xml
@@ -80,13 +80,14 @@
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="16dp"
                     android:alpha="0.6"
+                    android:autofillHints=""
                     android:gravity="center"
                     android:hint="@string/searchBar"
                     android:inputType="text"
                     android:textColor="@color/black"
                     android:textColorHint="@color/searchBarHint"
-                    android:textStyle="italic"
-                    android:autofillHints="" />
+                    android:textStyle="italic" />
+
                 <ListView
                     android:id="@+id/listView"
                     android:layout_width="match_parent"
