--- a/app/src/main/res/layout/activity_eat.xml
+++ b/app/src/main/res/layout/activity_eat.xml
@@ -11,7 +11,8 @@
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".Eat">
 
         <!--Need to alter the margin values (currently hardcoded)-->
         <com.google.android.material.navigation.NavigationView
