--- a/app/src/main/res/layout/activity_stay.xml
+++ b/app/src/main/res/layout/activity_stay.xml
@@ -11,7 +11,8 @@
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".Stay">
 
 
     <!--Need to alter the margin values (currently hardcoded)-->
@@ -101,7 +102,7 @@
                     android:id="@+id/listStayDisplay"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    
+
 
                 </ListView>
 
