Eat displays eat data from DB as well as contact number and website url if any have those

--- a/app/src/main/res/layout/activity_eat.xml
+++ b/app/src/main/res/layout/activity_eat.xml
@@ -94,16 +94,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/etSearch"
+                    android:layout_centerInParent="true"
                     android:divider="@android:color/darker_gray"
-                    android:dividerHeight="1dp"
-                    android:layout_centerInParent="true" />
-
-
-                <ImageView
-                    android:id="@+id/sharedImageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:transitionName="sharedImage" />
+                    android:dividerHeight="1dp" />
 
             </RelativeLayout>
         </RelativeLayout>
