--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -46,13 +46,13 @@
                 <TextView
                     android:id="@+id/tvActivitiesHeading"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="48dp"
                     android:gravity="center|start"
                     android:shadowColor="@color/black"
                     android:shadowDx="1"
-                    android:shadowDy="1"
-                    android:shadowRadius="20"
+                    android:shadowDy="10"
+                    android:shadowRadius="10"
                     android:text="@string/activitiesHeading"
                     android:textColor="@color/white"
                     android:textSize="45sp"
