--- a/app/src/main/res/layout/activity_businesses.xml
+++ b/app/src/main/res/layout/activity_businesses.xml
@@ -20,20 +20,24 @@
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/drawer_header_layout"
             app:menu="@menu/drawer_menu" />
+
         <RelativeLayout
             android:id="@+id/relDrawerLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <FrameLayout
                 android:id="@+id/frameParentBusinesses"
                 android:layout_width="match_parent"
                 android:layout_height="150dp">
+
                 <ImageView
                     android:id="@+id/imgBusinesses"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/businesses_image_background"/>
+
                 <ImageButton
                     android:id="@+id/btnMenu"
                     android:layout_width="wrap_content"
@@ -43,16 +47,17 @@
                     android:minWidth="32dp"
                     android:src="@drawable/baseline_menu_24"
                     tools:ignore="SpeakableTextPresentCheck" />
+
                 <TextView
                     android:id="@+id/tvBusinessesHeading"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="48dp"
                     android:gravity="center|start"
                     android:shadowColor="@color/black"
                     android:shadowDx="1"
-                    android:shadowDy="1"
-                    android:shadowRadius="20"
+                    android:shadowDy="10"
+                    android:shadowRadius="10"
                     android:text="@string/BusinessesHeading"
                     android:textColor="@color/white"
                     android:textSize="45sp"
