--- a/app/src/main/res/layout/activity_eat.xml
+++ b/app/src/main/res/layout/activity_eat.xml
@@ -44,23 +44,27 @@
                 <ImageButton
                     android:id="@+id/btnMenu"
                     android:layout_width="wrap_content"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center|start"
                     android:background="@android:color/transparent"
-                    android:minWidth="32dp"
+                    android:minWidth="40dp"
+                    android:shadowColor="@color/black"
+                    android:shadowDx="1"
+                    android:shadowDy="10"
+                    android:shadowRadius="10"
                     android:src="@drawable/baseline_menu_24"
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <TextView
                     android:id="@+id/tvEatHeading"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="48dp"
                     android:gravity="center|start"
                     android:shadowColor="@color/black"
                     android:shadowDx="1"
-                    android:shadowDy="1"
-                    android:shadowRadius="20"
+                    android:shadowDy="10"
+                    android:shadowRadius="10"
                     android:text="@string/eatHeading"
                     android:textColor="@color/white"
                     android:textSize="45sp"
