--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -19,25 +19,25 @@
 
         <item
             android:id="@+id/nav_business"
-            android:title="@string/Experience"
+            android:title="@string/BusinessesHeading"
             android:icon="@drawable/baseline_fastfood_24"
             app:actionLayout="@layout/spinner"/>
 
         <item
             android:id="@+id/nav_Activities"
-            android:title="@string/Experience"
+            android:title="@string/activitiesHeading"
             android:icon="@drawable/baseline_fastfood_24"
             app:actionLayout="@layout/spinner"/>
 
         <item
             android:id="@+id/nav_Events"
-            android:title="@string/Experience"
+            android:title="@string/eventsHeading"
             android:icon="@drawable/baseline_fastfood_24"
             app:actionLayout="@layout/spinner"/>
 
         <item
             android:id="@+id/nav_Contacts"
-            android:title="@string/Experience"
+            android:title="@string/contactUsHeading"
             android:icon="@drawable/baseline_fastfood_24"
             app:actionLayout="@layout/spinner"/>
 
