--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -12,7 +12,7 @@
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--Need to alter the margin values (currently hardcoded)-->
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="match_parent"
@@ -76,10 +76,9 @@
                     tools:ignore="SpeakableTextPresentCheck">
 
                     <LinearLayout
-                        android:id="@+id/linearContactUsListings"
+                        android:id="@+id/linearContactUs"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/custom_corner_radius_stay"
                         android:orientation="vertical">
 
                     </LinearLayout>
