--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -9,7 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
+        android:background="@drawable/round_image"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_launcher_foreground" />
 
     <TextView
@@ -24,13 +29,54 @@
         android:text="Title" />
 
     <TextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/tvWebsiteURL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/titleTextView"
+        android:layout_marginTop="16dp"
+        android:textSize="16sp"
+        android:autoLink="web"
+        android:text="something@example.co.za"
+        android:drawableStart="@drawable/website"/>
+
+    <TextView
+        android:id="@+id/tvContactNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvWebsiteURL"
+        android:layout_marginTop="8dp"
+        android:autoLink="phone"
+        android:drawableStart="@drawable/call"
+        android:text="0825649853"
+        android:textSize="16sp"
+        tools:ignore="TouchTargetSizeCheck" />
+
+    <View
+        android:id="@+id/lineAboveDescription"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/tvContactNumber"
+        android:alpha="0.2"
+        android:layout_marginTop="8dp"
+        android:background="@color/black"
+        />
+
+    <TextView
+        android:id="@+id/tvDescriptionHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lineAboveDescription"
+        android:layout_marginTop="8dp"
+        android:textSize="20sp"
+        android:text="Description" />
+
+    <TextView
+        android:id="@+id/descriptionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvDescriptionHeading"
         android:layout_marginTop="8dp"
         android:textSize="16sp"
-        android:text="Description"
-        android:gravity="center_horizontal" />
+        android:text="Stuff about our shop" />
 
 </RelativeLayout>
