--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     android:id="@+id/tvHomeHeading"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="48dp"
+                    android:layout_marginStart="60dp"
                     android:gravity="center|start"
                     android:shadowColor="@color/black"
                     android:shadowDx="1"
@@ -89,43 +89,50 @@
                         android:textStyle="bold" />
 
                     <LinearLayout
-                        android:layout_width="230dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:weightSum="3"
                         android:layout_gravity="center_horizontal"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/btnStil"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="70dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_weight="1"
-                            android:drawableStart="@android:drawable/ic_dialog_info"
+                            android:drawableTop="@drawable/info"
                             android:gravity="center_horizontal"
                             android:text="@string/Stilbaai"
-                            android:textSize="12sp"/>
+                            android:textSize="10sp"/>
 
                         <Button
                             android:id="@+id/btnJong"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="70dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_weight="1"
-                            android:drawableStart="@android:drawable/ic_dialog_info"
+                            android:drawableTop="@drawable/info"
                             android:gravity="center_horizontal"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:scrollHorizontally="true"
                             android:text="@string/Jongensfontein"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
 
                         <Button
                             android:id="@+id/btnMelk"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="70dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_weight="1"
-                            android:drawableStart="@android:drawable/ic_dialog_info"
+                            android:drawableTop="@drawable/info"
                             android:gravity="center_horizontal"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:scrollHorizontally="true"
                             android:text="@string/Melkhoutfontein"
-                            android:textSize="12sp" />
+                            android:textSize="10sp" />
                     </LinearLayout>
 
                     <TextView
@@ -155,6 +162,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="32dp"
                         android:text="@string/EelAdvert"
                         android:textSize="16sp"
                         android:textStyle="bold" />
@@ -162,7 +170,7 @@
                     <ImageView
                         android:id="@+id/imageView9"
                         android:layout_width="wrap_content"
-                        android:layout_height="92dp"
+                        android:layout_height="100dp"
                         app:srcCompat="@drawable/home_eel" />
 
                     <TextView
@@ -178,6 +186,7 @@
                         android:id="@+id/imageView8"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
                         app:srcCompat="@drawable/home_store" />
                 </LinearLayout>
             </RelativeLayout>
